[project]
name = "chatbot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.2.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "load-dotenv>=0.1.0",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pypdf>=6.5.0",
    "requests>=2.32.5",
]
